--- a/zoo/pom.xml
+++ b/zoo/pom.xml
@@ -4,4 +4,28 @@
   <artifactId>zoo</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>zoo_project</name>
+  <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+  
+  <dependencies>
+  	<dependency>
+     	<groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-engine</artifactId>
+        <version>5.4.0</version>
+        <scope>test</scope>
+    </dependency>
+    	
+  </dependencies>
 </project>
