--- a/zoo/pom.xml
+++ b/zoo/pom.xml
@@ -21,6 +21,13 @@
         <version>5.7.0-M1</version>
         <scope>test</scope>
     </dependency>
+	
+	<dependency>
+    	<groupId>com.github.stefanbirkner</groupId>
+    	<artifactId>system-lambda</artifactId>
+    	<version>1.0.0</version>
+    	<scope>test</scope>
+	</dependency>
     	
   </dependencies>
   
