--- a/zoo/pom.xml
+++ b/zoo/pom.xml
@@ -28,6 +28,12 @@
     	<version>1.0.0</version>
     	<scope>test</scope>
 	</dependency>
+	
+	<dependency>
+         <groupId>joda-time</groupId>
+         <artifactId>joda-time</artifactId>
+         <version>2.9.9</version>
+     </dependency>
     	
   </dependencies>
   
