--- a/.gitignore
+++ b/.gitignore
@@ -121,7 +121,6 @@ GPATH
 GRTAGS
 GSYMS
 GTAGS
-Gemfile.lock
 /rb/.bundle
 /rb/.idea
 .sonar/
@@ -159,3 +158,7 @@ selenium_assignment/.idea
 /.metadata/
 zoo/target/
 mockito/target
+
+#ruby
+ruby-minitest/.bundle
+ruby-minitest/vendor
